# Bootcamp

./: README.md  pyproject.toml
Case 1/: FMT_Icecream_Skeleton.ipynb  FMT_Icecream_Solutions.ipynb  ice_cream_shop_dataset.csv
Case 2/: script_househunter_skeleton.ipynb  script_househunter_solution.ipynb
Tree Based Modelling/: README.md  pyproject.toml
Tree Based Modelling/1. HeartFailurePrediction Case/data/: HeartFailurePrediction.xlsx
Tree Based Modelling/1. HeartFailurePrediction Case/notebooks/: TBM_HeartFailurePrediction_Case_Full.ipynb  TBM_HeartFailurePrediction_Case_Skeleton.ipynb
Tree Based Modelling/1. HeartFailurePrediction Case/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Tree Based Modelling/1. HeartFailurePrediction Case/notebooks/catboost_info/learn/: events.out.tfevents
Tree Based Modelling/2. COVID Case/notebooks/: TBM_Covid_Case_Full.ipynb  TBM_Covid_Case_Skeleton.ipynb
